# boneyard

./: README.md  qping.py
abigail/: Makefile  README.md  devel.sh
abigail/python/: abigail.py
acme-docs/: .gitmodules  Makefile  README.md
acme-docs/books/: index.adoc
acme-docs/includes/: attributes.adoc
alt-cpp-reconnect/: Makefile  main.cpp
amq-io/: Makefile
amq-io/docs/: get-started.html  index.html  main.css
amq-io/input/: index.md
astute-panic/: .gitignore  Planofile  arrow.c  notes.md
astute-panic/misc/: codes.txt  count.py
bailey/: Makefile  README.md  devel.sh
bailey/misc/: TODO.md
bailey/python/: qpid_management.py  quest.py  tests.py  tool.py
bailey/scripts/: install-files  python-path  test.sh
bleep/: Makefile
bleep/twiddle/: pom.xml
blinky-container/: Dockerfile  Makefile  blinky-container.service
bluescout/: Makefile  README.md  devel.sh  package.json  server.js
bluescout/misc/: notes.md
cistern/: Makefile  README.md  devel.sh
commandant/: .gitignore  Makefile  README.md  setup.py
commandant/python/: commandant.py  commandant_tests.py
commandant/scripts/: test
croquet/: Makefile  README  devel.sh
croquet/scripts/: configure-file
dimestore/: Makefile  static
dimestore/config/: config.py
dimestore/input/: model.yaml
dimestore/python/: epithet.py
disco/: Makefile  devel.sh  setup.py
disco/files/: disco.css
disco/scripts/: get-devel-python-path
epithet/: README.md
epithet/files/: main.css
epithet/python/: epithet.py
files-http-container/: Dockerfile  Makefile  nginx.conf
files-ssh-container/: Dockerfile  Makefile  run.sh
files-ssh-container/conf/: sshd_config
flin/: index.html  main.js  router.conf
flurp/: Dockerfile  Makefile  config.txt
hello-world-jms-openshift/: README.md  pom.xml
hello-world-jms-openshift/receiver/: pom.xml
hello-world-jms-openshift/scripts/: test
hello-world-jms-openshift/sender/: pom.xml
hello-world-jms-openshift/templates/: messaging-service.yaml  receiver.yaml  sender.yaml
home.apache.org/: Makefile
home.apache.org/input/: C6B459DB.asc  index.md
howl/: Makefile
iniquity/: Makefile  README  devel.sh  qdrouterd.conf
iniquity/python/: iniquity.py
jolly/: Makefile  database.py  flimsy.html  flimsy.sql  jolly.db  plucky.sql  plucky.txt
lintel/: Makefile  README.md  devel.sh
lintel/input/: downstream.md  jiropticon.md  more-queries.md  upstream.md
lintel/python/: lintel.py  pencil.py  plano.py
lintel/scripts/: gen-jiropticon  pretty-model
lowboy/: Makefile  README.md  config.sh
lowboy/ruby/: lowboy.rb
lowboy/scripts/: director  executor-python  executor-ruby
misc/: animal-ids.py  async-await-example.py  custom-elements-test.html  custome-elements-test.js  gen-cve-index  get-string.c  new-qdrouterd.conf  parse-key-value-pairs.js  planosh.py  profiled-python-thread.py  proton-test-multiple-senders-with-timers-and-threads.py  proton-test-multiple-senders-with-timers.py  proton-test-multiple-senders.py  qdrouterd.conf  rename-qpid-site-vars  rhea.html  string-split.cpp  tcp-client.py  tcp-server.py  termextractor  termextractor2  test-message-priority.py
morty/: .gitignore  Makefile  README.md  package.json
morty/lib/: main.js
multi-topic-level-repo-template/: Makefile  README.md
multi-topic-level-repo-template/global/: document-attributes.adoc  topic-shared-1.adoc  topic-shared-2.adoc
multi-topic-level-repo-template/scripts/: buildGuides.sh
nodejs-messaging-work-queue/: Makefile  README.md
nodejs-messaging-work-queue/frontend/: package.json  server.js
nodejs-messaging-work-queue/scripts/: run
nodejs-messaging-work-queue/templates/: amq-7-image-streams.yaml  frontend.yaml  worker.yaml
nodejs-messaging-work-queue/worker/: package.json  server.js
pacer/: CMakeLists.txt  Makefile.misc
pacer/include/qpid/pacer/: Pacer.h
pacer/src/: main.cpp
pacer/src/qpid/pacer/: Pacer.cpp
pacer/src/qpid/pacer/config/: CommandLineConfig.cpp  Config.h
patient-information/: main.js  package.json
pencil/: .gitignore  Makefile  README.md  devel.sh  setup.py
pencil/scripts/: test-pencil
penny/: penny.html  penny.js
pingpong/: Makefile  README.md  devel.sh
pingpong/notes/: install.md
pingpong/scripts/: test
pliny/: .gitignore  Makefile  README.md  config.sh
pliny/doc/: slideshow.md
pliny/etc/: insecure.pem  pliny-devel-instance.conf.in  pliny-system-instance.conf  pliny.conf
pompom/: .planofile  Makefile  README.md  pompom.planofile
porkpie/: README.md
poser/: .planofile  Makefile  common.h  hash.c  list.c  map.c  object.c  string.c
proton-statically-linked/: Makefile  electric-alibi.spec
qbit/: NOTICE
qdr-tls-connection-test/: Planofile  client.js
qip/: Makefile  convert.py  index.md.in  index.py  notes.md  qip-template.md  template.html
qpid-cpp-windows/: env.bat  notes.txt
qpid-source-reorg/: README.md  appveyor.yml
ragbag/: Makefile  README  config.sh
ramp/: Makefile  Profile
rivet/: README  config.sh  setup.py
rivet2/: Makefile  README.md  devel.sh
spicerack/: Makefile  Profile  README  TAGS
spicerack/mace/cpp/: Makefile.am  README  bootstrap  configure.ac
spicerack/mace/cpp/etc/: mace.conf
spicerack/mace/cpp/src/: GridSim.cpp  Makefile.am
spicerack/mace/cpp/src/qmfgen/: Makefile.am  condor-management-schema.xml  mace.xml  sesame.xml
spicerack/sesame/cpp/src/: Makefile.am  SysAgent.cpp
spicerack/sesame/cpp/src/qmfgen/: Makefile.am
spindle/: README.md
spreadsheet-processing/: generate.py  model.py
sshable-container/: Dockerfile  Makefile
sshable-docker-image/: Dockerfile  README.md
stagger-container/: Dockerfile  Makefile  stagger-container.service
stutter/: .gitignore  Makefile  README.md  devel.sh
test-a-qdr-release-in-podman/: Dockerfile  Makefile
tubadev/: Makefile  Profile  Todo
turret/: Makefile  README  devel.sh  setup.py
vertx-messaging-work-queue-booster/: Makefile  README.md  pom.xml
wfswarm-messaging-work-queue/: .gitignore  Makefile  README.md  pom.xml
wicket/: client.html  server.py
word-cloud-jms-kubernetes/: Makefile  README.md
(+1245 files in other folders)
